--- a/src/components/drop-area.module.css
+++ b/src/components/drop-area.module.css
@@ -1,4 +1,4 @@
-.drop-area {
+.dropArea {
   border: 2px dashed #ccc;
   border-radius: 20px;
   width: 960px;
@@ -6,7 +6,7 @@
   margin: 100px auto;
   padding: 20px;
 }
-.drop-area.highlight {
+.dropArea.highlight {
   border-color: purple;
 }
 
@@ -16,14 +16,16 @@
 .gallery {
   margin-top: 10px;
 }
-.gallery img {
-  width: 100%;
+.galleryImg {
+  width: 100px;
+  height: 100px;
   margin-bottom: 10px;
   margin-right: 10px;
   vertical-align: middle;
 }
 .button {
   display: inline-block;
+  margin-left: 10px;
   padding: 10px;
   background: #ccc;
   cursor: pointer;
