--- a/src/components/drop-area.module.css
+++ b/src/components/drop-area.module.css
@@ -1,40 +1,37 @@
 .dropArea {
   border: 2px dashed #ccc;
   border-radius: 20px;
-  width: 960px;
   font-family: sans-serif;
-  margin: 100px auto;
-  padding: 20px;
+  margin: 15px auto;
+  padding: 3%;
 }
+
 .dropArea.highlight {
   border-color: purple;
 }
 
-.form {
-  margin-bottom: 10px;
-}
-.gallery {
-  margin-top: 10px;
-}
-.galleryImg {
-  width: 100px;
-  height: 100px;
-  margin-bottom: 10px;
-  margin-right: 10px;
-  vertical-align: middle;
-}
 .button {
   display: inline-block;
-  margin-left: 10px;
+  margin-right: 10px;
   padding: 10px;
   background: #ccc;
   cursor: pointer;
   border-radius: 5px;
   border: 1px solid #ccc;
+  overflow: hidden;
 }
+
 .button:hover {
   background: #ddd;
 }
+
 .fileElem {
   display: none;
+}
+
+.viewDropArea {
+  width: 80%;
+  margin: 5% auto;
+  padding: 3%;
+  text-align: center;  
 }
