--- a/styles/DrawDropArea.module.css
+++ b/styles/DrawDropArea.module.css
@@ -1,7 +1,19 @@
+
+.viewDropArea {
+  max-width: 80%;
+  margin: 80px auto 0px;
+  text-align: center;  
+}
+
+.buttonArea {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+}
+
 .dropArea {
   border: 2px dashed #ccc;
   border-radius: 20px;
-  font-family: sans-serif;
   margin: 15px auto;
   padding: 3%;
 }
@@ -10,28 +22,6 @@
   border-color: purple;
 }
 
-.button {
-  display: inline-block;
-  margin-right: 10px;
-  padding: 10px;
-  background: #ccc;
-  cursor: pointer;
-  border-radius: 5px;
-  border: 1px solid #ccc;
-  overflow: hidden;
-}
-
-.button:hover {
-  background: #ddd;
-}
-
 .fileElem {
   display: none;
-}
-
-.viewDropArea {
-  width: 80%;
-  margin: 5% auto;
-  padding: 3%;
-  text-align: center;  
 }
