--- a/styles/DrawGallery.module.css
+++ b/styles/DrawGallery.module.css
@@ -1,32 +1,38 @@
 .gallery {
-  margin: auto;
-  display: grid;
-}
-.galleryImg {
-  width: 100%;
-  height: 50%;
-  margin: 5%;
-  vertical-align: middle;
+  margin: 10px 0px 0px;
 }
    
 .propsImg{
   display: flex;
-  margin: 1%;  
-  height: 100px;
-  position: relative;
+  flex-wrap: wrap;
+  margin: 3px;  
   align-items: center;
+  justify-content: space-around;
+  border: 2px dotted #ccc;
+  border-radius: 10px;
+  padding: 2px;
 }
   
 .blockImg{
-  display: inline-block;
-  width: 10%;
-  height: 100%;
-  margin: 0.5%;
-  position: absolute;
+  max-width: 20%;
+  margin: 3px 5px 10px;
+  align-items: center;
 }  
   
+.galleryImg {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  max-width: 100%;
+  border: 2px dotted rgb(12, 111, 204);
+}
+
 .nameGalleryImg{
-  text-align: center;
   word-break: break-all;
-  font-size: 1vw;
+}
+
+@media (max-width: 767px) {
+  .blockImg{
+    max-width: 100%;
+  }  
 }
